task3-kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  labels:
    app: nodejs-app
spec:
  selector:
    app: nodejs-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  type: LoadBalancer
